k8s/vc-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vc-api-deployment
  labels:
    app: analytics
  namespace: verifications-namespace
spec:
  selector:
    matchLabels:
      app: vc-api
  replicas: 1
  template:
    metadata:
      labels:
        app: vc-api
    spec:
      serviceAccountName: secrets-manager-access-sa
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "aws-secrets"
      containers:
        - name: vc-api
          image: ${AWS_ID}.dkr.ecr.eu-central-1.amazonaws.com/justaname-production/vc-api:latest
          ports:
            - containerPort: 3009
          volumeMounts:
            - mountPath: "/mnt/secrets-store"
              name:  secrets-store-inline
              readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: vc-api-service
  namespace: verifications-namespace
spec:
  selector:
    app: vc-api
  ports:
    - port: 3009
      targetPort: 3009
  type: ClusterIP
