k8s/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-alb-production
  namespace: verifications-namespace
spec:
  ingressClassName: kong
  rules:
    - host: api.justaname.id
      http:
        paths:
          - path: /verifications/v1
            pathType: Prefix
            backend:
              service:
                name: vc-api-service
                port:
                  number: 3009
